--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -66,7 +66,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
-		        		
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.7.13</version>
+		</dependency>
 	</dependencies>
 
 	<build>
